# lab_2_test_git

./: README.md
.github/workflows/: tests.yml
lab_1/: Dockerfile  README.md  pyproject.toml  run.sh
lab_1/src/: main.py
lab_1/tests/: test_lab_1.py
lab_2/: Dockerfile  pyproject.toml  run.sh  test.sh
lab_2/src/: main.py
lab_2/tests/: test_lab2.py
lab_2/trainer/: pyproject.toml  train.py
lab_3/: README.md  pyproject.toml  run.sh  test.sh
lab_3/src/: main.py
lab_3/tests/: test_lab3.py
lab_3/trainer/: predict.py
