[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["sagarlimbu0 <sagarlimbu027@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
requests = "^2.28.2"
httpx = "^0.23.3"
isort = "^5.11.4"
black = "^22.12.0"
openapi = "^1.1.0"
pytest = "^7.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
