[tool.poetry]
name = "lab-2"
version = "0.1.0"
description = ""
authors = ["sagarlimbu0 <sagarlimbu027@gmail.com>"]
readme = "README.md"
packages = [{include = "lab_2"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
joblib = "^1.2.0"
requests = "^2.28.2"
httpx = "^0.23.3"
isort = "^5.11.4"
black = "^22.12.0"
scikit-learn = "^1.2.1"
openapi = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
