[tool.poetry]
name = "lab-3"
version = "0.1.0"
description = ""
authors = ["sagarlimbu0 <sagarlimbu027@gmail.com>"]
readme = "README.md"
packages = [{include = "lab_3"}]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
requests = "^2.28.2"
joblib = "^1.2.0"
scipy = "^1.10"
scikit-learn = "1.2.1"
pytest = "^7.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
black = "^23.1.0"
isort = "^5.12.0"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"